<resources>

    <string name="app_name">Training note by Rybalkin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="creation_of_training">Creation of training</string>
    <string name="name_of_train">Name of train</string>
    <string name="name_of_exercise">Name of exercise</string>
    <string name="start_train">Start train</string>
    <string name="create_new_training">CREATE A NEW TRAINING</string>
    <string name="my_trainings">MY TRAININGS</string>
    <string name="results_of_last_training">RESULTS OF LAST TRAININGS</string>
    <string name="quantity_of_repeats">Quantity of repeats</string>
    <string name="weight">Weight</string>
    <string name="next_set">Next set</string>
    <string name="next_exercise">Next exercise</string>
    <string name="quantity_of_sets">Quantity of sets</string>
    <string name="date">Date</string>
    <string name="quantity_of_exercises">Quantity of exercises</string>
    <string name="save_training">Save training</string>
    <string name="toast_of_result">You don\'t have saved results of last trainings</string>
    <string name="toast_of_trainings">You don\'t have saved trainings</string>
    <string name="its_first_set">It\'s your first set of that exercise</string>
    <string name="no_name">No name</string>
    <string name="some_fields_empty">Some fields are empty</string>
    <string name="training_is_over">The training is over</string>
    <string name="time">Time</string>
    <string name="greeting">Today is perfect day to work out</string>
    <string name="last_training">Your last training</string>
    <string name="sec">sec.</string>
    <string name="min">min.</string>
    <string name="hour">hour.</string>
    <string name="you_wrote">You wrote</string>
    <string name="exercises">exercise/s.</string>
    <string name="count_of_exercise">Number of set</string>
    <string name="finish_and_save_training">Finish and save training</string>
    <string name="delete">Delete</string>
    <string name="choose_excercise">To choose the exercise tap here</string>
    <string name="empty_table">Here will be shown your last training</string>

</resources>