<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_rdNameOfExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/archivo_semibold"
        android:text="@string/name_of_exercise"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/blackLine"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_rdNameOfExercise"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />
    <View
        android:id="@+id/blackLine2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blackLine3"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="178dp" />


    <View
        android:id="@+id/blackLine3"
        android:layout_width="5dp"
        android:layout_height="200dp"
        android:background="@color/grey"
        app:layout_constraintLeft_toRightOf="@id/tv_rdQuantityOfRepeats"
        app:layout_constraintRight_toLeftOf="@id/tv_rdQuantityOfRepeats2"
        app:layout_constraintTop_toBottomOf="@id/blackLine"
        app:layout_constraintBottom_toTopOf="@id/blackLine3"

        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/tv_rdNameOfExercise2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/archivo_semibold"
        app:layout_constraintLeft_toRightOf="@id/tv_rdNameOfExercise"
        app:layout_constraintTop_toTopOf="@id/tv_rdNameOfExercise" />

    <TextView
        android:id="@+id/tv_rdQuantityOfRepeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/archivo_semibold"
        android:text="@string/quantity_of_repeats"
        app:layout_constraintLeft_toLeftOf="@id/tv_rdNameOfExercise"
        app:layout_constraintTop_toBottomOf="@id/tv_rdNameOfExercise" />

    <TextView
        android:id="@+id/tv_rdWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/archivo_semibold"
        android:text="@string/weight"
        app:layout_constraintLeft_toLeftOf="@id/tv_rdNameOfExercise"
        app:layout_constraintTop_toBottomOf="@id/tv_rdQuantityOfSets" />

    <TextView
        android:id="@+id/tv_rdQuantityOfRepeats2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_semibold"
        app:layout_constraintLeft_toLeftOf="@id/tv_rdNameOfExercise2"
        app:layout_constraintTop_toTopOf="@id/tv_rdQuantityOfRepeats" />

    <TextView
        android:id="@+id/tv_rdWeight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_semibold"
        app:layout_constraintLeft_toLeftOf="@id/tv_rdNameOfExercise2"
        app:layout_constraintTop_toTopOf="@id/tv_rdWeight" />

    <TextView
        android:id="@+id/tv_rdQuantityOfSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/archivo_semibold"
        android:text="@string/quantity_of_sets"
        app:layout_constraintLeft_toLeftOf="@id/tv_rdNameOfExercise"
        app:layout_constraintTop_toBottomOf="@id/tv_rdQuantityOfRepeats" />

    <TextView
        android:id="@+id/tv_rdQuantityOfSets2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_semibold"

        app:layout_constraintLeft_toLeftOf="@id/tv_rdNameOfExercise2"
        app:layout_constraintTop_toTopOf="@id/tv_rdQuantityOfSets" />

    <TextView
        android:id="@+id/tv_rdTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/archivo_semibold"
        android:text="@string/time"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/tv_rdWeight"
        app:layout_constraintTop_toBottomOf="@id/tv_rdWeight" />

    <TextView
        android:id="@+id/tv_rdTime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_semibold"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/tv_rdNameOfExercise2"
        app:layout_constraintTop_toTopOf="@id/tv_rdTime" />
</androidx.constraintlayout.widget.ConstraintLayout>