<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragment.CreateTrainFragment">


    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creation_of_training"
        android:layout_marginTop="50dp"
        android:textSize="40sp"
        android:gravity="center"
        android:fontFamily="@font/alata"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_NameOfTrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name_of_train"
        android:inputType="text"
        android:text=""
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <EditText
        android:id="@+id/ed_nameOfExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:fontFamily="@font/archivo_semibold"
        android:gravity="center"
        android:hint="@string/name_of_exercise"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_NameOfTrain" />

    <Button
        android:id="@+id/b1"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/peach"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/archivo_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_nameOfExercise" />

    <Button
        android:id="@+id/b2"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/archivo_semibold"
        android:backgroundTint="@color/peach"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/b1"
        app:layout_constraintTop_toBottomOf="@+id/ed_nameOfExercise" />

    <TextView
        android:id="@+id/tv_Rememb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:fontFamily="@font/alata"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>