<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragment.TrainFragment">

    <TextView
        android:id="@+id/tv_NameOfTrain2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text=""
        android:textSize="60sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:background="@color/crimson_red"
        app:layout_constraintTop_toBottomOf="@id/tv_NameOfTrain2"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:background="@color/crimson_red"
        app:layout_constraintTop_toBottomOf="@id/tv_NameOfExercise2"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:background="@color/crimson_red"
        app:layout_constraintTop_toBottomOf="@id/tv_NumbOfSet"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:background="@color/crimson_red"
        app:layout_constraintTop_toBottomOf="@id/tv_Timer2"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <View
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/crimson_red"
        app:layout_constraintTop_toBottomOf="@id/tv_quantityOfRepeats"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <View
        android:id="@+id/line6"
        android:layout_width="5dp"
        android:layout_height="0dp"
        android:background="@color/crimson_red"
        app:layout_constraintLeft_toRightOf="@id/et_QuantityOfRepeats"
        app:layout_constraintRight_toLeftOf="@id/et_Weight"
        app:layout_constraintTop_toBottomOf="@id/line4"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/tv_Timer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/tv_NumbOfSet"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


    <TextView
        android:id="@+id/tv_NameOfExercise2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_NameOfTrain2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tv_quantityOfRepeats"
        android:layout_width="0dp"
        android:maxWidth="180dp"
        android:layout_height="wrap_content"
        android:text="@string/quantity_of_repeats"
        android:gravity="center"
        android:fontFamily="@font/alata"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/line6"
        app:layout_constraintTop_toBottomOf="@id/tv_Timer2"
        android:layout_marginTop="40dp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="0dp"
        android:maxWidth="150dp"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_quantityOfRepeats"
        app:layout_constraintLeft_toLeftOf="@id/line6"
        app:layout_constraintBottom_toBottomOf="@id/tv_quantityOfRepeats"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="433dp" />

    <Button
        android:id="@+id/b_nSet"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/next_set"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/b_nExercise"
        android:layout_marginBottom="30dp"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="631dp" />

    <Button
        android:id="@+id/b_nExercise"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/next_exercise"
        app:layout_constraintBottom_toBottomOf="@id/b_nSet"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/b_nSet"
        tools:layout_editor_absoluteX="260dp"
        tools:layout_editor_absoluteY="633dp" />

    <EditText
        android:id="@+id/et_QuantityOfRepeats"
        android:layout_width="70dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/b_nSet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_Weight"
        app:layout_constraintTop_toBottomOf="@+id/tv_quantityOfRepeats" />

    <EditText
        android:id="@+id/et_Weight"
        android:layout_width="70dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@id/et_QuantityOfRepeats"
        app:layout_constraintLeft_toRightOf="@id/et_QuantityOfRepeats"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_QuantityOfRepeats" />

    <TextView
        android:id="@+id/tv_NumbOfSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_of_exercise"
        app:layout_constraintTop_toBottomOf="@id/tv_NameOfExercise2"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>