<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_rDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:fontFamily="@font/archivo_semibold"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id="@+id/tv_rNameOfTrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_of_train"
        android:gravity="center"
        android:fontFamily="@font/archivo_semibold"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/tv_rDate"
        android:layout_marginRight="35dp"
        app:layout_constraintRight_toLeftOf="@id/tv_rTime"
        app:layout_constraintLeft_toRightOf="@id/tv_rDate"
        />

    <TextView
        android:id="@+id/tv_rTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:gravity="center"
        android:fontFamily="@font/archivo_semibold"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/tv_rDate"
        android:layout_marginRight="40dp"
        app:layout_constraintRight_toRightOf="parent"
        />

    <View
        android:id="@+id/line1"
        android:layout_width="5dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toLeftOf="@+id/tv_rNameOfTrain"
        app:layout_constraintLeft_toRightOf="@id/tv_rDate"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintBottom_toTopOf="@id/line3"

        android:background="@color/turquoise"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="0dp" />
    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:background="@color/turquoise"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/line4"
        android:layout_width="7dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_rNameOfTrain"
        app:layout_constraintRight_toLeftOf="@id/tv_rTime"
        android:background="@color/turquoise"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintBottom_toTopOf="@id/line3"
        />

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rTime2"
        android:background="@color/turquoise"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tv_rDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="@font/alata"
        app:layout_constraintLeft_toLeftOf="@id/tv_rDate"
        app:layout_constraintRight_toRightOf="@id/tv_rDate"
        app:layout_constraintTop_toBottomOf="@id/tv_rDate"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/tv_rNameOfTrain2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/alata"
        app:layout_constraintLeft_toLeftOf="@id/tv_rNameOfTrain"
        app:layout_constraintRight_toRightOf="@+id/tv_rNameOfTrain"
        app:layout_constraintTop_toBottomOf="@id/tv_rDate" />

    <TextView
        android:id="@+id/tv_rTime2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/alata"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_rDate" />

    <View
        android:id="@+id/RView"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>